openspending/ui/public/static/style/style.css
/* Bootstrap overrides */
body {
  padding-top: 40px;
}

.page-header {
  padding-bottom: 0;
}

.topbar .menu-dropdown, .dropdown-menu {
  min-width: 350px;
  max-width: 400px;
}

.green {
  color: #99c862;
}

/* cf. https://github.com/twitter/bootstrap/issues/706 */
input, textarea, button, select, .btn {
  -webkit-transform-style: inherit;
}

/* Replicate pagination */

/*
.pager {
  display: inline-block;
  height: 36px;
  margin: 18px 0;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  border: 1px solid rgba(0, 0, 0, 0.15);
  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
}

.pager a, .pager .pager_dotdot, .pager .pager_curpage {
  margin: 0px;
  line-height: 34px;
  text-decoration: none;
  padding: 0 14px;
}

.pager a:hover, .pager .active a {
  color: black;
}
*/

/* Custom theming */
@font-face {
  font-family: Graublau;
  src: url('/static/fonts/graublau/GraublauWeb.otf') format("opentype");
}

@font-face {
  font-family: Share;
  src: url('/static/fonts/share/Share-Regular.otf') format("opentype");
}

.brand, .topbar, h1, h2, h3 {
  font-family: Share;
  font-weight: normal;
  letter-spacing: -0.06em;
}

.brand:hover {
  text-decoration: none;
}

.nav-tabs li.dropdown {
  float: right;
}

.nav-tabs ul.dropdown-menu.times {
  min-width: 100px;
}

.nav-tabs li.admin a {
  color: red;
}

.representations {
  float: right;
}

.nav select { 
  display: block;
  float: none;
  margin: 10px 10px 11px;
  line-height: 19px;
  height: 19px;
}

.topbar div > ul .dropdown-menu li.current-locale a {
  color: #ccc;
}

.dropdown-menu.locale-dropdown {
  min-width: 150px;
}

.modal form {
  margin-bottom: 0px;
}

footer ul {
  list-style-type: none;
  margin: 0em;
}

footer ul li {
  display: inline-block;
  padding-right: 2em;
}

footer p.right {
  float: right;
}

footer img {
  margin-bottom: -3px;
}

/* Front page */

#fp-wrap {
	position:relative;
}

#fp-blurb {
	position: absolute;
	left: 640px;
	top: 0;
	padding: 10px;
	font-size: 13px;
	line-height: 18px;
	background: rgba(0, 0, 0, 0.5);
	border-bottom-right-radius: 10px;
	border-top-right-radius: 10px;
	min-height: 300px;
}

#fp-blurb p {
	color: #fff;
	font-size: 1.1em;
	margin: 20px 10px 10px;
	line-height: 1.6em;
}

#fp-map {
	width: 100%; height: 320px;
	border-radius: 10px;
	background: #fbf9f9; /* Old browsers */
	background: -moz-linear-gradient(top,  #fbf9f9 0%, #efeded 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fbf9f9), color-stop(100%,#efeded)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #fbf9f9 0%,#efeded 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #fbf9f9 0%,#efeded 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #fbf9f9 0%,#efeded 100%); /* IE10+ */
	background: linear-gradient(top,  #fbf9f9 0%,#efeded 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fbf9f9', endColorstr='#efeded',GradientType=0 ); /* IE6-9 */	
}

#fp-map svg path.regions {
	stroke: #fff;
	stroke-width: 0.3px;
}

#fp-map svg path.regions:hover {
	fill: #c00;
	cursor: pointer;
}

#fp-map svg path.bg {
	stroke: #d3d0d0;
	fill: #d3d0d0;
	opacity: 0.5;
}



/* Table layouts */

/*
table th {
  color: white;
  border: 1px solid #CCC;
  background-color: #333;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  background-image: -webkit-linear-gradient(top, #666666, #111111);
  background-image: -moz-linear-gradient(top, #666666, #111111);
  background-image: linear-gradient(top, #666666, #111111);
}

table th.sorting_desc {
  background-color: #666666;
}
*/

table th, table td { 
  padding: 5px;
}

div.dataTables_wrapper {
  min-height: 0px;
}

table td.num,
table th.num {
    text-align: right;
}

.growth {
  color: green;
}

.shrink {
  color: red;
}

.no-desc {
    font-style: italic;
}


/* Browser */
.facets {
  display: block;
  max-height: 15em;
  overflow-y: scroll;
  width: 100%;
  border-bottom: 1px solid #ddd;
  border-left: 1px solid #ddd;
  border-radius: 0px;
}

.facets .count {
  color: #999;
}

.facets td {
  border-left: 0px;
}

.unfilter {
  color: red !important;
}

.search-form input {
    font-size: 1.2em;
    padding: 0.3em;
}

.search-form input.search {
    width: 80%;
    margin-right: 2em;
}

.search-form .form-help, .form-options {
    color: #999;
    font-variant: italic;
    text-align: right;
    width: 80%;
    padding: 0.5em;
}

.search-help-text {
    margin-top:1em;
    padding: 10px;
    border: 1px solid #ddd;
    display: none;
}

.search-help-text ul {
    margin-bottom: 0em;
}

/* Entry page */
.entry-page .entities,
.entry-page .amount {
  /*border: 1px solid #ccc;*/
  padding: 5px;
}

.entry-page .entities span {
  font-weight: bold;
}

.entry-page .entities div {
  font-size: 1.3em;
  font-weight: bolder;
  padding: 5px;
  font-family: Graublau, sans-serif;
}

.entry-page .amount {
}

.entry-page .amount .currency {
  font-weight: bold;
  font-size: 0.5em;
  display: inline;
  vertical-align: top;
}

.entry-page .amount .number {
  font-size: 2em;
  margin-top: 10px;
  border: 1px solid #ccc;
  font-weight: bolder;
  padding: 20px;
  font-family: Graublau, sans-serif;
  -moz-border-radius: 12px;
  -webkit-border-radius: 12px;
  border-radius: 12px;

     -moz-box-shadow: 0px 0px 10px #aaaaaa;
  -webkit-box-shadow: 0px 0px 10px #aaaaaa;
          box-shadow: 0px 0px 10px #aaaaaa;

}

.entry-page .amount .date {
  float: right;
  color: #aaa;
}

/* Help */
.help-page a.headerlink {
  display: none;
}

/*
.help-page ul.breadcrumb {
  margin: 0px;
}
*/

.help-page .sphinxsidebarwrapper h3 {
  display: none;
}

.help-page h1 {
  display: none;
}

.help-page li {
  color: #333;
}

.help-page .pre,
.help-page pre {
  font-family: monospace;
  background-color: #efefef;
  font-size: 11px;
}

.help-page dt .pre {
  font-weight: bolder;
}

.help-page dd {
  margin-bottom: 5px;
}

.help-page .highlighttable {
  border: 0px;
}

.help-page .highlighttable table th + th, 
.help-page .highlighttable table td + td {
  border-left: 0px;
  padding: 0px;
}

/* Data sources */
table.sources td {
  vertical-align: middle;
}

table.sources td form {
  display: inline; 
  margin-bottom: 0px;
}

table.sources td form input.small {
  width: auto;
}

table.sources td.ops {
  width: 25%;
  text-align: right;
}

table.sources td.top {
  vertical-align: top;
}

table.sources ul.runs {
  margin-bottom: 0px;
}

/* Bubbletree vs. Bootstrap specific fixes. */
.bubbletree .label {
  padding: 0px;
  font-weight: normal;
  background-color: rgba(0,0,0,0);
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  border-radius: 0px;
}

.bubbletree .amount,
.bubbletree .desc {
   font-family: Share !important;
}

